force-app/main/default/objects/Application_Type__c/Application_Type__c.object-meta.xml
<CustomObject>
    <label>Application Type</label>
    <nameField>
        <label>Application_Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>