force-app/main/default/objects/Application_Type__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Authority</label>
    <referenceTo>Authority__c</referenceTo>
    <relationshipLabel>Application Types</relationshipLabel>
    <relationshipName>Application_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>