force-app/main/default/objects/Application_Type__c/fields/Base_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Fee_Amount__c</fullName>
    <label>Base Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>