force-app/main/default/objects/Application_Type__c/fields/Biometrics_Required__c.field-meta.xml
<CustomField>
    <fullName>Biometrics_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Biometrics Required</label>
    <type>Checkbox</type>
</CustomField>