force-app/main/default/objects/Application_Type__c/fields/Form_Code__c.field-meta.xml
<CustomField>
    <fullName>Form_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Form Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>