force-app/main/default/objects/Application_Type__c/fields/Guidance_URL__c.field-meta.xml
<CustomField>
    <fullName>Guidance_URL__c</fullName>
    <label>Guidance URL</label>
    <type>Url</type>
</CustomField>