force-app/main/default/objects/Application_Type__c/fields/Medical_Exam_Required__c.field-meta.xml
<CustomField>
    <fullName>Medical_Exam_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Exam Required</label>
    <type>Checkbox</type>
</CustomField>