force-app/main/default/objects/Application_Type__c/fields/Standard_Processing_Days__c.field-meta.xml
<CustomField>
    <fullName>Standard_Processing_Days__c</fullName>
    <label>Standard Processing Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>